@@ -1,1 +1,5 @@
 setopt NOFLOWCONTROL
+
+# Java Options
+export MAVEN_OPTS="-Xmx4096m"
+export _JAVA_OPTIONS="-Xms2048m -Xmx2048m -XX:MaxPermSize=1024m"
